# esp32s3_cam

./: CMakeLists.txt  export_idf.sh  partitions.csv  sdkconfig  sdkconfig.old  upload.sh
components/screen/controller_driver/st7789/: st7789.c
components/tfmicro/: CMakeLists.txt
components/tfmicro/tensorflow/lite/micro/: memory_helpers.cc
components/tfmicro/tensorflow/lite/micro/kernels/: reduce.cc
main/: CMakeLists.txt  button.cc  button.h  component.mk  detection_responder.cc  detection_responder.h  dog_cam_log.cc  dog_cam_log.h  main_functions.cc  mqtt_conf.h  mqtt_processing.cc  sdcard_mount.cc  sdcard_mount.h  shared_variables.h  take_photo_main.cc
main/esp/: app_camera_esp.c  app_camera_esp.h  image_provider.cc
main/hmtl/: index.html
main/include/: PCT2075.h  __base__.hpp  app_button.hpp  app_lcd.hpp  device_info.h  http_servers.h  i2c_utils_component.h  logo_en_240x240_lcd.h
main/person_model_grayscale/: person_detect_model_data.cc
main/src/: PCT2075.cc  app_button.cpp  app_lcd.cpp  device_info.cc  i2c_utils.cpp
ulp/: i2c-utils.S  i2c.S  stack.S
